fix: overflow header

--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -6,6 +6,7 @@
     position: relative;
     top: 50px;
     z-index: 1;
+    overflow: hidden;
     
     @media (max-width: 599px) {
         display: flex;
